Fix overflow issue, update CSS
The calculator is working perfectly. CSS is looking alright.

--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,17 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-h3 {
-  margin: 5px;
-}
-
 .mainContainer {
   display: flex;
   flex-flow: column;
   align-items: center;
+
   width: 260px;
-  border: 5px solid black;
+  border: 3px solid black;
+  border-radius: 5%;
   margin: 1em;
   padding: 1em 1em 0.5em 1em;
+
   background-color: rgb(255, 167, 26);
 }
 
@@ -25,19 +24,27 @@ h3 {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  font-size: 100%;
-  border: 1px solid black;
+  word-wrap: break-word;
+  word-break: break-all;
+
   width: 200px;
-  height: 80px;
+  height: auto;
+  min-height: 80px;
+  border: 1px solid black;
   padding: 5px;
+
   background-color: black;
   color: white;
+
+  font-size: 100%;
   font-weight: bolder;
 }
+
 .calculatorContainer {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+
   gap: 5px;
   width: 250px;
   margin: 25px;
@@ -46,6 +53,7 @@ h3 {
 .clearContainer {
   display: flex;
   flex-direction: column;
+
   gap: 2px;
 }
 
@@ -54,13 +62,16 @@ h3 {
   width: 50px;
   height: 20px;
   outline: 0;
-  cursor: pointer;
   border: 2px solid #000;
   border-radius: 3px;
+
   color: #fff;
   background: #000;
+
   font-size: 12px;
   font-weight: 600;
+
+  cursor: pointer;
   transition-duration: .15s;
   transition-property: all;
   transition-timing-function: cubic-bezier(.4,0,.2,1);
@@ -69,14 +80,17 @@ h3 {
 .equalBtn {
   width: 216px;
   outline: 0;
-  cursor: pointer;
   border: 2px solid #000;
   border-radius: 3px;
+  padding: 5px 5px;
+
   color: #fff;
   background: #000;
+
   font-size: 20px;
   font-weight: 600;
-  padding: 5px 5px;
+
+  cursor: pointer;
   transition-duration: .15s;
   transition-property: all;
   transition-timing-function: cubic-bezier(.4,0,.2,1);
@@ -90,14 +104,17 @@ h3 {
 .divideBtn {
   width: 50px;
   outline: 0;
-  cursor: pointer;
   border: 2px solid #000;
   border-radius: 3px;
+  padding: 5px 5px;
+
   color: #fff;
   background: #000;
+
   font-size: 20px;
   font-weight: 600;
-  padding: 5px 5px;
+
+  cursor: pointer;
   transition-duration: .15s;
   transition-property: all;
   transition-timing-function: cubic-bezier(.4,0,.2,1);
